# scanpay-api

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
api/mtn/: payment_gateway.py  serializers.py  services.py
app_api/: urls.py
ledger/: models.py
ledger/migrations/: 0001_initial.py
payments/: mtn_api.py
sales/: models.py  serializers.py  services.py  signals.py  urls.py  views.py
sales/management/commands/: create_dummy_transactions.py
sales/migrations/: 0001_initial.py  0002_alter_invoice_status_alter_transaction_status_and_more.py
scanpay/: asgi.py  settings.py  urls.py  wsgi.py
templates/oauth2_provider/: authorize.html  base.html
templates/registration/: login.html
users/: admin.py  auth.py  forms.py  managers.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
users/management/commands/: generate_client_identifier.py  generate_code_verifier.py  generate_companies_and_addresses.py  generate_test_data.py
users/migrations/: 0001_initial.py  0002_alter_client_options_alter_merchant_options_and_more.py  0003_user_username.py  0004_alter_user_id.py  0005_user_qr_code.py  0006_alter_user_qr_code.py  0007_alter_user_options_user_ip_address_user_mfa_token_and_more.py  0008_address_user_picture_company_user_company.py  0009_alter_company_status.py
utils/: email_client.py  errors.py  permissions.py  qr_code_generator.py
